--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
         <div class="divider"></div>
 
         <p class="result-type">
-          <span class="result years-results">--</span> years
+          <span class="result years-result">--</span> years
         </p>
         <p class="result-type">
-          <span class="result" months-result>--</span> months
+          <span class="result months-result">--</span> months
         </p>
         <p class="result-type">
           <span class="result days-result">--</span> days
