--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 aria-invalid="false"
                 aria-errormessage="invalid-year-error"
               />
-              <span id="invalid-year-error" class="error-msg">Must be in the past</span>
+              <span id="invalid-year-error" class="error-msg">Must be a valid year</span>
             </p>
           </div>
 
@@ -79,8 +79,8 @@
               class="arrow-btn-icon"
               aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
-              width="1.8rem"
-              height="1.8rem"
+              width="2.5rem"
+              height="2.5rem"
               viewBox="0 0 46 44"
             >
               <g fill="none" stroke="#FFF" stroke-width="3">
