--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                 aria-invalid="false"
                 aria-errormessage="invalid-day-error"
               />
-              <span id="invalid-day-error" class="error-msg">Must be a valid day</span>
+              <span id="invalid-day-error" class="error-msg"
+                >Must be a valid day</span
+              >
             </p>
 
             <p class="flex-group-column">
@@ -56,7 +58,9 @@
                 aria-invalid="false"
                 aria-errormessage="invalid-month-error"
               />
-              <span id="invalid-month-error" class="error-msg">Must be a valid month</span>
+              <span id="invalid-month-error" class="error-msg"
+                >Must be a valid month</span
+              >
             </p>
 
             <p class="flex-group-column">
@@ -70,7 +74,9 @@
                 aria-invalid="false"
                 aria-errormessage="invalid-year-error"
               />
-              <span id="invalid-year-error" class="error-msg">Must be a valid year</span>
+              <span id="invalid-year-error" class="error-msg"
+                >Must be a valid year</span
+              >
             </p>
           </div>
 
@@ -95,15 +101,17 @@
 
         <div class="divider"></div>
 
-        <p class="result-type">
-          <span class="result years-result">- -</span> years
-        </p>
-        <p class="result-type">
-          <span class="result months-result">- -</span> months
-        </p>
-        <p class="result-type">
-          <span class="result days-result">- -</span> days
-        </p>
+        <div class="result-content">
+          <p class="result-type">
+            <span class="result years-result">- -</span> years
+          </p>
+          <p class="result-type">
+            <span class="result months-result">- -</span> months
+          </p>
+          <p class="result-type">
+            <span class="result days-result">- -</span> days
+          </p>
+        </div>
       </section>
 
       <footer>
