--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <main>
       <section class="card">
-        <form action="">
+        <form action="#">
           <div class="flex-group-row">
             <p class="flex-group-column">
               <label for="day">Day</label>
